--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 #root {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
   font-family: "Poppins", sans-serif;
   background-color: #f3f4f6;
